# telegram

./: CMakeLists.txt  Cards.cpp  Cards.h  Users.cpp  Users.h  data.txt  main.cpp
lib/: Cards.cpp  Cards.h  Users.cpp  Users.h  config.c  config.h  data.txt  rc522.c  rc522.h  reader.c  reader.h  rfid.c  rfid.h
